# ml-utils

./: .gitignore  Pipfile  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg
docs/: index.html  ml_utils.html  search.js  search.json  woe_binning.html
docs/ml_utils/: _helper.html  _woe_binning.html  draw.html  explain.html  explore_data.html  feature_selection.html  generate.html  index.html  measure.html  metrics.html  prepare_data.html  preprocess.html
docs/ml_utils/feature_selection/: _woe_binning.html
docs/ml_utils/measure/: bias_fairness.html  data_drift.html  metrics.html
docs/templates/: css.mako
ml_utils/: __init__.py  _helper.py  _woe_binning.py  draw.py  explain.py  explore_data.py  generate.py  measure.py  metrics.py  prepare_data.py  preprocess.py
ml_utils/feature_selection/: __init__.py  _feature_selection.py
ml_utils/measure/: bias_fairness.py  data_drift.py  metrics.py
tests/: test_classification.py
