[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-utils"
dynamic = ["version"]
description = "Helper functions for all binary classification modelling problems including visualisations, scoring metrics - psi, ks, gini."
readme = "README.md"
license = "BSD 3-Clause License"
authors = [
    { name = "Avinash Kanumuru", email = "avinash.eee@gmail.com" },
]
dependencies = [
    "openpyxl",
    "paramiko",
    "saspy",
    "scikit-learn",
    "seaborn",
    "tqdm",
]

[tool.hatch.version]
path = "ml_utils/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ml_utils",
]

