[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-utils"
dynamic = ["version"]
description = "Helper functions for all binary classification modelling problems including visualisations, scoring metrics - psi, ks, gini."
readme = "README.md"
license = {text = "BSD License"}
authors = [
    { name = "Avinash Kanumuru", email = "avinash.eee@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openpyxl",
    "paramiko",
    "saspy",
    "scikit-learn",
    "seaborn",
    "tqdm",
]

[tool.hatch.version]
path = "ml_utils/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ml_utils",
]

