[tool.poetry]
name = "ml-utils"
version = "0.1.0"
description = "Helper functions for all binary classification modelling problems including visualisations, scoring metrics - psi, ks, gini."
authors = ["avinashknmr <avinash.eee@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.4"
tqdm = "^4.66.4"
xgboost = "^2.0.3"
lightgbm = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
