[metadata]
name = ml_utils
version = attr: ml_utils.__version__
description = Helper functions for all binary classification modelling problems including visualisations, scoring metrics - psi, ks, gini.
license = BSD 3-Clause License
author = Avinash Kanumuru
author_email = avinash.eee@gmail.com

[options]
packages = find_namespace:
install_requires = 
    seaborn
	openpyxl
	scikit-learn
	paramiko
	saspy
	tqdm

[sdist]
formats = gztar, zip

[bdist_wheel]
universal = 1